<resources>
    <string name="app_name">ProyectoUIA</string>
    <string name="elespiaingles">Durant la guerra freda entre els Estats Units i Rússia, l\'enginyer Greville Wynne (Benedict Cumberbatch) s\'infiltra com espia al MI5, servei d\'intel·ligència britànic. Quan la crisi dels míssils cubans promet inclinar la balança a favor del país soviètic, Wynne començarà a treballar amb la CIA per filtrar informació sobre el pla que tenen en marxa els russos i així evitar una catàstrofe.</string>
    <string name="elespiainglesDurada"><b>Durada:</b>111\'</string>
    <string name="elespiainglesDirector"><b>Director:</b>Dominic Cooke</string>
    <string name="elespiainglesActors"><b>Director:</b>Benedict Cumberbatch , Rachel Brosnahan , Merab Ninidze , Jessie Buckley</string>
    <string name="elespiainglesQualificacio"><b>Qualificació:</b>12 anys</string>
    <string name="elespiainglesGenere"><b>Gènere:</b>Drama - Thriller</string>
    <string name="infoLineas">Consulta els horaris complets de totes les línies de Transgran, visualitzar el recorregut a Google Maps i les seves parades i informa’t de les incidències i alteracions del servei.</string>
    <string name="infoTaxis"><b>Contacta amb nosaltres:</b> Telf: 93 870 30 28 \n taxisgranollers.com \n Mándanos un mail</string>
    <string name="infoTaxisLocalitzacio"><b>On estem </b> Carrer de Girona, 2 08402 Granollers Barcelona</string>
    <string name="infoHorarisTaxis">Horaris 24 hores els 365 dies</string>

    <string name="escolapiBlau"><b>Escolapi Blau</b></string>
    <string name="escolapiBlauPlaces"><b>Places disponibles: </b>42\n<b>Places totals: </b>50</string>
    <string name="teatreAuditori"><b>Teatre Auditori</b></string>
    <string name="teatreAuditoriPlaces"><b>Places disponibles: </b>38\n<b>Places totals: </b>40</string>
    <string name="corona"><b>Corona</b></string>
    <string name="coronaPlaces"><b>Places disponibles: </b>23\n<b>Places totals: </b>60</string>
    <string name="LaPatrullaCanina">La Patrulla Canina està en ratxa. Quan Humdinger, el seu major rival, esdevé alcalde de la propera Ciutat Aventura i comença a causar estralls, Ryder i els heroics cadells es posen en marxa per fer front a aquest nou repte. Mentre un dels cadells ha d\'enfrontar-se al seu passat a Ciutat Aventura, l\'equip troba ajuda en una nova aliada, la intel·ligent gosseta salsitxa Liberty. Junts i armats amb nous i emocionants artefactes i equips, la Patrulla Canina lluita per salvar els ciutadans de Ciutat Aventura.</string>
    <string name="PatrullaDurada"><b>Durada:</b>86\'</string>
    <string name="PatrullaDirector"><b>Director:</b>Cal Brunker</string>
    <string name="PatrullaQualificacio"><b>Qualificació:</b>Apta</string>
    <string name="PatrullaGenere"><b>Gènere:</b>Animació</string>
    <string name="Patron">Bàscules Blanco, una empresa de producció de balances industrials en una ciutat de províncies, espera la visita d\'una comissió de la qual depèn l\'obtenció d\'un premi local a l\'Excel·lència Empresarial: les coses han de ser perfectes per a aquest moment. No obstant això, tot sembla confabular-se en contra. En el poc temps de què disposa, Blanco (Bardem) intenta tornar a la seva empresa l\'equilibri perdut: tracta de resoldre els problemes dels seus empleats, creuant per això totes les línies imaginables.</string>
    <string name="PatronDurada"><b>Durada:</b>115\'</string>
    <string name="PatronDirector"><b>Director:</b>Fernando León de Aranoa</string>
    <string name="PatronActors"><b>Actors:</b>Javier Bardem , Manolo Solo , Almudena Amor</string>
    <string name="PatronQualificacio"><b>Qualificació:</b>12 anys</string>
    <string name="PatronGenere"><b>Gènere:</b>Drama - Comedia</string>
    <string name="titolTaxis">TAXIS GRANOLLERS</string>
    <string name="descripTaxis">Servei de taxi 24 hores. Nacional e internacional</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel1titol">Hotel Arc La Rambla</string>
    <string name="hotel1localitzacio">La Rambla 19, 08002 Barcelona España</string>
    <string name="textbotohotels">Trucan\'s</string>
    <string name="textvaloraciohotels">Valoran\'s!</string>
    <string name="textaadreçahotels">Adreça</string>
    <string name="hotel2titol">NH Collection Barcelona Pódium</string>
    <string name="hotel3titol">H10 Madison</string>
    <string name="hotel3localitzacio">C/ Dr. Joaquim Pou, 2–4–6, 08002 Barcelona España</string>
    <string name="hotel2localitzacio">Bailén, 4–6, 08010 Barcelona España</string>
    <string name="hotel4titol">el Jardi</string>
    <string name="hotel4localitzacio">Placa Sant Josep Oriol 1 Barri Gòtic, 08002 Barcelona España</string>
    <string name="hotel5titol">Hotel Medicis</string>
    <string name="hotel5localitzacio">Carrer de los Castillejos, 340, 08025 Barcelona España</string>
    <string name="hotel6titol">Hotel Amrey Sant Pau</string>
    <string name="hotel6localitzacio">C / Sant Antoni Maria Claret, 173 Esquina Sant Quintí, 08041 Barcelona España</string>
    <string name="hotel9titol">Hostal River</string>
    <string name="hotel9localitzacio">Sant Pau 15, 08015 Barcelona España</string>
    <string name="hotel8titol">Be Ramblas Hotel</string>
    <string name="hotel8localitzacio">Carrer Nou de La Rambla 50, 08001 Barcelona España</string>
    <string name="hotel7titol">Hotel Ciutat de Sant Adria</string>
    <string name="hotel7localitzacio">Santa Caterina, 38 Sant Adria del Besos, 08003 Barcelona España</string>
    <string name="la_cookessa_bio_granollers">La Cookessa Bio Granollers</string>
    <string name="cookessaAdreça">Carrer de Ponent, 25, 08401 Granollers, Barcelona</string>
    <string name="anima_de_granollers">Ànima de Granollers</string>
    <string name="adrecamirallet">08402, Plaça de la Porxada, 39, 08401 Granollers, Barcelona</string>
    <string name="el_mirallet">El Mirallet</string>
    <string name="bistrotaliano">El bistro\' italiano</string>
    <string name="adrecabistro">Passeig Francesc Macià, 19, LOCAL 3, 08187 El Rieral, Barcelona</string>
    <string name="il_sapore_italiano">Il Sapore Italiano</string>
    <string name="adrecaSaocre">Carrer de Ponent, 41, 08401 Granollers, Barcelona</string>
    <string name="mezzaubi">Carrer de Foment, 2, 08402 Granollers, Barcelona</string>
    <string name="la_mezza_luna">La Mezza Luna</string>
    <string name="sector">Escull el sector</string>
    <string name="peluqueria1">Xavier Arcarons Perruquers</string>
    <string name="adreçapelu1">Carrer Príncep de Viana, nº 6, 08401 Granollers</string>
    <string name="tria_la_qualitat_dels_hotels">Tria la qualitat dels hotels</string>
    <string name="tria_la_qualitat_dels_restaurants">Tria la qualitat dels Restaurants</string>
    <string name="japo1">Robata Restaurant Japonés</string>
    <string name="japo1adreca">Carrer d\'Enric Granados, 55, 08008 Barcelona</string>
    <string name="japo2">Kurai Restaurante Japonés</string>
    <string name="japo2adreca">Carrer de Tarragona, 99, 08014 Barcelona</string>
    <string name="japo3">Restaurante Shunka</string>
    <string name="japo3adreca">Carrer dels Sagristans, 5, 08002 Barcelona</string>
    <string name="pelu3">Marc Calvache Hair Salon</string>
    <string name="adreçapelu3">Carrer de Sant Josep, 1, 08401 Granollers, Barcelona</string>
    <string name="adreçapelu2">Carrer de Sant Josep, 12, 08401 Granollers, Barcelona</string>
    <string name="pelu2">Nova Perruquers</string>
    <string name="farmacia1">Farmàcia Arimany</string>
    <string name="direcciofarmacia1">Plaça Josep Maluquer i Salvador, 11, 08401 Granollers</string>
    <string name="farmacia2">Farmàcia</string>
    <string name="farmacia3">Farmàcia</string>
    <string name="asso1">Cannallers</string>
    <string name="direccioaso1">Avinguda d\'Europa, Nº 36, 08401 Granollers</string>
    <string name="aso2">Associació</string>
</resources>