<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".ActivitatMovies">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="ContentDescription">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/escolapi">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/escolapiBlau"
                    android:textSize="14sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/escolapiBlauPlaces"
                    android:textSize="12sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="ContentDescription">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/teatreauditori">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teatreAuditori"
                    android:textSize="14sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teatreAuditoriPlaces"
                    android:textSize="12sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="ContentDescription">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/corona">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/corona"
                    android:textSize="14sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coronaPlaces"
                    android:textSize="12sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>