<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment2Hotels"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/hotel4"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel4titol">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel4localitzacio"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textbotohotels"
                android:id="@+id/b1">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/hotel5"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel5titol">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel5localitzacio"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textbotohotels"
                android:id="@+id/b2">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/hotel6"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel6titol">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel6localitzacio"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textbotohotels"
                android:id="@+id/b3">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>