<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment1Hotels"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bistro"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bistrotaliano">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adrecabistro"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="235dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textbotohotels"
                    android:id="@+id/b1">
                </Button>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconoweb"
                    android:id="@+id/wb1"/>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconmap"
                    android:id="@+id/mb1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sapore"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/il_sapore_italiano">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adrecaSaocre"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="235dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textbotohotels"
                    android:id="@+id/b2">
                </Button>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconoweb"
                    android:id="@+id/wb2"/>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconmap"
                    android:id="@+id/mb2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mezza"
            android:padding="5dp"
            android:layout_gravity="center_vertical">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/la_mezza_luna">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textaadreçahotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mezzaubi"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textvaloraciohotels"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </TextView>
            <RatingBar
                android:layout_width="235dp"
                android:layout_height="wrap_content">
            </RatingBar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textbotohotels"
                    android:id="@+id/b3">
                </Button>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconoweb"
                    android:id="@+id/wb3"/>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iconmap"
                    android:id="@+id/mb3"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>